Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27131

REG: Misplaced base line in print preview on Mac OS X

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0 RC 1
    • 5.0.0 Beta 1
    • GUI: Printing
    • None
    • macOS
    • a949d4ef8f1366e216df88915377516f47d4120c

    Description

      Run the widgets/richtext/textedit example and hit "Print Preview". You will see that the base line of lower case t, upper case S and some other characters is wrong. This does not happen in Qt 4.8.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes