Fix rounding error when drawing scaled text on OS X

This especially affected the print preview dialog, where certain
characters would be grossly mispositioned.

Task-number: QTBUG-27131
Change-Id: I385474a6f609a8f4291988206c7e63a0747673dd
Reviewed-by: Jiang Jiang <jiang.jiang@nokia.com>